home pages, plus some other minor changes

--- a/blog-details-left-sidebar.html
+++ b/blog-details-left-sidebar.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Vizion - Al/ML - Computer vizion Responsive HTML5 Template</title>
+      <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
       <!-- Bootstrap CSS -->
@@ -308,7 +308,7 @@
                         <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Vizion All rights reserved 2019</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
                </div>
             </div>
             <!-- back-to-top -->
