--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Vizion - Al/ML - Computer vizion Responsive HTML5 Template</title>
+      <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
       <!-- Bootstrap CSS -->
@@ -89,14 +89,15 @@
             <div class="container-fluid">
                <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12 align-self-center">
-                     <h1>Computer Vizion for the Real World</h1>
-                     <p class="mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <!-- <h1>10X ROI using Computer Vision, AI, and Machine Learning</h1> -->
+                     <h1>10X ROI</h1> <h2>using Computer Vision, AI, and Machine Learning</h2> 
+                     <p class="mb-5">Delivering faster, better, and power efficient solutions for your business needs.</p>
                      <a href="" class="button mb-lg-0 mb-5">See Solutions</a>
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 text-right position-relative">
                      <img src="images/banner/02.png" class="img-fluid banner-box" alt="images">
                      <div class="banner-img text-center">
-                        <img class="img-fluid rounded-circle position-relative" src="images/banner/01.jpg" alt="image">
+                        <img class="img-fluid rounded-circle position-relative" src="images/test_pics/bg.jpg" alt="image">
                         <a href="video/01.m4v" class="video-btn iq-video popup-youtube">
                            <i class="ion-ios-play-outline"></i>
                         </a>
@@ -116,8 +117,9 @@
                <div class="row">
                   <div class="col-lg-12">
                      <div class="title-box">
-                        <h2 class="title">Computer Vizion AI</h2>
-                        <p class="sub-title">The point of using Lorem Ipsum</p>
+                        <h2 class="title">Gaussian Solutions</h2>
+                        <!-- <p class="sub-title">On the Edge, In the Cloud</p> -->
+                        <h4 class="sub-title">On the Edge, In the Cloud</h4>
                      </div>
                   </div>
                </div>
@@ -141,26 +143,26 @@
                            <ul>
                               <li class="text-left object-new">
                                  <a data-links-to="slide_1" class="one" href="#">
-                                    <h3 class="iq-fw-8">Object Detection</h3>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                    <h3 class="iq-fw-8">Occupancy Analytics</h3>
+                                    <p>Optimize revenue, lower costs, by gaining who, how, and when your facility is used.</p>
                                  </a>
                               </li>
                               <li class="object-new">
                                  <a data-links-to="slide_2" class="one" href="#">
-                                    <h3 class="iq-fw-8">Video Analysis</h3>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                    <h3 class="iq-fw-8">Vehicle, and Pedestrian Analytics</h3>
+                                    <p>Build smart cities with insights from roads, sidewalks, and intersections usage.</p>
                                  </a>
                               </li>
                               <li class="object-new selected">
                                  <a data-links-to="slide_3" class="two" href="#">
-                                    <h3 class="iq-fw-8">Visual Search</h3>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                    <h3 class="iq-fw-8">Baggage Analytics</h3>
+                                    <p>Better ground operations with real-time type, make, and size of checkin, and carryon bags.</p>
                                  </a>
                               </li>
                               <li class="object-new">
                                  <a data-links-to="slide_4" class="two" href="#">
-                                    <h3 class="iq-fw-8">Image Analysis</h3>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                    <h3 class="iq-fw-8">Documentation Extraction</h3>
+                                    <p>Extract information from Driver's license, SSNs, W-2s, real estate forms faster.</p>
                                  </a>
                               </li>
                            </ul>
@@ -534,7 +536,7 @@
                         <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Vizion All rights reserved 2019</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
                </div>
             </div>
             <!-- back-to-top -->
