--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <div class="col-lg-6 col-md-12 col-sm-12 align-self-center">
                      <!-- <h1>10X ROI using Computer Vision, AI, and Machine Learning</h1> -->
                      <h1>10X ROI</h1> <h2>using Computer Vision, AI, and Machine Learning</h2> 
-                     <p class="mb-5">Delivering faster, better, and power efficient solutions for your business needs.</p>
+                     <p class="mb-5">Delivering faster, better, and efficient solutions for your business needs.</p>
                      <a href="" class="button mb-lg-0 mb-5">See Solutions</a>
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 text-right position-relative">
@@ -117,9 +117,11 @@
                <div class="row">
                   <div class="col-lg-12">
                      <div class="title-box">
-                        <h2 class="title">Gaussian Solutions</h2>
+                        <!-- <h2 class="title">Gaussian Solutions</h2> -->
+                        <h2 class="title">On the Edge, In the Cloud</h2>
                         <!-- <p class="sub-title">On the Edge, In the Cloud</p> -->
-                        <h4 class="sub-title">On the Edge, In the Cloud</h4>
+                        <!-- <h4 class="sub-title">On the Edge, In the Cloud</h4> -->
+                        <h4 class="sub-title">Customized, and scalable solutions for your needs</h4>
                      </div>
                   </div>
                </div>
