--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
                      <a href="" class="button mb-lg-0 mb-5">See Solutions</a>
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 text-right position-relative">
-                     <img src="images/banner/02.png" class="img-fluid banner-box" alt="images">
+                     <!-- <img src="images/banner/02.png" class="img-fluid banner-box" alt="images"> -->
                      <div class="banner-img text-center">
-                        <img class="img-fluid rounded-circle position-relative" src="images/test_pics/bg.jpg" alt="image">
-                        <a href="video/01.m4v" class="video-btn iq-video popup-youtube">
+                        <!-- <img class="img-fluid rounded-circle position-relative" src="images/money-2724241_1920.jpg" alt="image"> -->
+                        <img class="img-fluid banner-rounded-circle position-relative" src="images/money-2724241_1920.jpg" alt="image">
+
+                        <!-- <a href="video/01.m4v" class="video-btn iq-video popup-youtube"> -->
                            <i class="ion-ios-play-outline"></i>
                         </a>
                      </div>
@@ -153,7 +155,9 @@
                               <li class="object-new">
                                  <a data-links-to="slide_2" class="one" href="#">
                                     <h3 class="iq-fw-8">Vehicle, and Pedestrian Analytics</h3>
-                                    <p>Build smart cities with insights from roads, sidewalks, and intersections usage.</p>
+                                    <!-- <p>Build smart cities with insights from roads, sidewalks, and intersections usage. Get the number of vehicles, pedestrians, bikes, micromobility options flowing through the streets.</p> -->
+                                    <p>Build smart cities with insights from roads, sidewalks, and intersections usage. Get the number of vehicles, pedestrians, bikes, micromobility options flowing through the streets.</p>
+
                                  </a>
                               </li>
                               <li class="object-new selected">
@@ -182,22 +186,24 @@
                   <div class="col-lg-12">
                      <div class="title-box">
                         <h2 class="title">What's New</h2>
-                        <p class="sub-title">The point of using Lorem Ipsum</p>
+                        <!-- <p class="sub-title">Gaussian Solutions runners up in GSA Eula 2020 AI/ML challenge</p> -->
+                        <h4 class="sub-title">Gaussian Solutions runners up in GSA Eula 2020 AI/ML challenge</h4>
                      </div>
                   </div>
                </div>
                <div class="row justify-content-around">
                   <div class="col-lg-6">
-                     <h2 class="mb-3 iq-fw-8">Visual Search for retail</h2>
-                     <p class="mb-5">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-                     <a href="" class="button mb-5 mb-lg-0">See Solutions</a>
+                     <h2 class="mb-3 iq-fw-8">Faster Agreements with AI</h2>
+                     <p class="mb-5">Gaussian Solutions is proud to announce that we stood runners up in <a href="https://www.challenge.gov/challenge/GSA-artificial-intelligence-AI-machine-learning-ML-challenge/"> GSA AI/ML 2020 EULA Challenge</a>. We used Natural Language Processing, and Machine Learning to flag clauses in an End User License Agreements(EULA) that are unacceptable for GSA. The same technology can be used to expedite convergence of agreements between parties, flag anamolies in transactions, classify documents etc. Let us help your business reduce risk, time, and money spent on agreements.</p>
+                     <a href="mailto:info@gaussiansolutions.com" class="button mb-5 mb-lg-0">Contact Us</a>
                   </div>
                   <div class="col-lg-5">
-                     <img src="images/about/01.jpg" class="img-fluid" alt="#">
+                     <img src="images/blog/tech_cropped.jpg" class="img-fluid" alt="#">
                   </div>
                </div>
             </div>
          </section>
+         <!-- 
          <section class="our-features bg-over-main-90 position-relative iq-special-1">
             <div class="container">
                <div class="row">
@@ -277,7 +283,8 @@
                   </div>
                </div>
             </div>
-         </section>
+         </section> -->
+         
          <section class="our-customer">
             <div class="container">
                <div class="row">
