technology pages added

--- a/technology.html
+++ b/technology.html
@@ -90,7 +90,7 @@
          <div class="container-fluid">
             <div class="row align-items-center">
                <div class="col-auto mr-auto">
-                     <h2 class="iq-fw-8 text-white mb-0">Solutions</h2>
+                     <h2 class="iq-fw-8 text-white mb-0">Technology</h2>
                </div>
                <div class="col-auto text-right">
                   <nav aria-label="breadcrumb">
@@ -112,14 +112,15 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/03.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/Object-detection.png" class="img-fluid" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
                         <div class="tech-no">01</div>
-                        <h2 class="iq-fw-8 d-inline-block">Face Detection Tracking</h2>
+                        <h2 class="iq-fw-8 d-inline-block">Object Detection & Tracking</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">The core technology that drives all our solutions is detecting, and tracking the objects in a scene, be it be a person, a bike, a car, a suitcase, a backpack etc. By detecting the objects
+                        of interest in a scene, and tracking them, their dwell time, rich insights are derived.</p>
                   </div>
                </div>
             </div>
@@ -128,14 +129,16 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/about/04.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/car_counting.PNG" class="img-fluid" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
                         <div class="tech-no">02</div>
-                        <h2 class="iq-fw-8 d-inline-block">Identity Recognition</h2>
+                        <h2 class="iq-fw-8 d-inline-block">Vehicle Counting</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Counting vehicles, and their types simplified. Get real-time insights into occupancy of your parking lot, and off-line analytics on when the facility is being used most. Downstream 
+                        applications include publishing your real-time occupancy to parking aggregators, dynamic pricing, and scheduling maintenance when the facility is least used.
+                     </p>
                   </div>
                </div>
             </div>
@@ -144,14 +147,17 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/05.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/license_recognition.png" class="img-fluid" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
                         <div class="tech-no">03</div>
-                        <h2 class="iq-fw-8 d-inline-block">Facial Attributes</h2>
+                        <h2 class="iq-fw-8 d-inline-block">License Plate Recognition</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Our License Plate Recognition algorithm can detect state, license number, and expiry of the tags with greater accuracy than ever before. With the ability to run on a mobile device, and as a cloud algorithm,
+                        we enable automatic gate openers at the parking garages. No more resident, and visitors decals necessary. Simply register the license number as approved, and we do the rest. In addition, we 
+                        enable smart parking enforcement solutions to monitor wider area faster, searching for stolen vehicles, etc.
+                     </p>
                   </div>
                </div>
             </div>
@@ -160,14 +166,17 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/about/06.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/baggage_size.png" class="img-fluid" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
                         <div class="tech-no">04</div>
-                        <h2 class="iq-fw-8 d-inline-block">Face Grouping</h2>
+                        <h2 class="iq-fw-8 d-inline-block">Baggage Size, and Type</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Get fast insights into type, and dimensions of a bag. Enhance baggage check in system with additional information about size, color, and type of material for faster 
+                        recognition and retrieval of bags. Reduce time to unload bags when passengers miss the flight, and improve turn-around times of aircrafts. Use the technology at the boarding gates to monitor
+                        aircraft cabin space, and check in bags that no longer fit in the carryon space. Plus, get rich analytics of bags on a route, and how to optimize operations in that route.
+                     </p>
                   </div>
                </div>
             </div>
@@ -176,19 +185,23 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/07.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/driver_license.png" class="img-fluid" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
                         <div class="tech-no">05</div>
-                        <h2 class="iq-fw-8 d-inline-block">Document identification</h2>
+                        <h2 class="iq-fw-8 d-inline-block">Driver License Recognition</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Instantly recognize and extract the information on a driver license like the state, license number, address, issue date, expiry date etc. 
+                        Enable no-touch ID verification and expedite the checkin process. Quickly enable information exchange by taking a picture of the license, and let us do the rest. Get faster
+                        self-checkout counters by enabling auto verification of age, and credit card information with the driver license. Other forms of identification are in progress, and we will bring 
+                        them to you soon.
+                     </p>
                   </div>
                </div>
             </div>
          </section>
-         <section class="tech-ptb">
+<!--          <section class="tech-ptb">
             <div class="container">
                <div class="row align-items-center flex-row-reverse">
                   <div class="col-lg-6 text-right">
@@ -203,7 +216,7 @@
                   </div>
                </div>
             </div>
-         </section>
+         </section> -->
       </div>
       <!--=================================
       MAIN CONTENT -->
