--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
                </div>
             </div>
          </section> -->
-         
-         <section class="our-customer">
+
+         <!-- <section class="our-customer">
             <div class="container">
                <div class="row">
                   <div class="col-lg-12">
@@ -482,7 +482,7 @@
                   </div>
                </div>
             </div>
-         </section>
+         </section> -->
       </div>
       <!--=================================
       MAIN CONTENT -->
@@ -524,11 +524,11 @@
                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
                         <input type="email" name="" placeholder="Enter Email" class="subscription-email position-relative form-control d-inline-block">
-                        <a href="" class="button subscription-button">Sing Up</a>
+                        <a href="" class="button subscription-button">Sign Up</a>
                      </form>
                      <ul class="list-inline mb-5">
-                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
-                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">xyz@gmail.com</span></li>
+                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">+1 360 207 4159</span></li>
+                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
                         <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
