--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                               <li id="slide_1"><img src="images/about/05.jpg" class="img-fluid" alt="img" /></li>
                               <!-- <li id="slide_2"><img src="images/about/04.jpg" class="img-fluid" alt="img" /></li> -->
                               <li id="slide_2"><img src="images/smart_city/pedestrian_bike_car.jpg" class="img-fluid" alt="img" /></li>                               
-                              <li id="slide_3" class="active"><img src="images/about/06.jpg" class="img-fluid" alt="img" /></li>
+                              <li id="slide_3" class="active"><img src="images/technology/baggage_size.png" class="img-fluid" alt="img" /></li>
                               <li id="slide_4"><img src="images/drivers/annotated3.png" class="img-fluid" alt="img" /></li>
                            </ul>
                         </div>
