Sign up spelling change

--- a/blog-details-right-sidebar.html
+++ b/blog-details-right-sidebar.html
@@ -287,7 +287,7 @@
                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
                         <input type="email" name="" placeholder="Enter Email" class="position-relative form-control d-inline-block subscription-email">
-                        <a href="" class="button subscription-button">Sing Up</a>
+                        <a href="" class="button subscription-button">Sign Up</a>
                      </form>
                      <ul class="list-inline mb-5">
                         <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
