--- a/login.html
+++ b/login.html
@@ -192,7 +192,7 @@
                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
                         <input type="email" name="" placeholder="Enter Email" class="subscription-email position-relative form-control d-inline-block">
-                        <a href="" class="button subscription-button">Sing Up</a>
+                        <a href="" class="button subscription-button">Sign Up</a>
                      </form>
                      <ul class="list-inline mb-5">
                         <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
