--- a/solutions.html
+++ b/solutions.html
@@ -73,12 +73,12 @@
                      </div>
                   </nav>
                </div>
-               <div class="col-lg-2 text-right p-0">
+               <!-- <div class="col-lg-2 text-right p-0">
                   <ul class="login">
                      <li class="d-inline pr-3 pr-md-2"><a href="login.html">Login</a></li>
                      <li class="d-inline pl-3 pl-md-0"><a href="register.html">Register</a></li>
                   </ul>
-               </div>
+               </div> -->
             </div>
          </div>
       </header>
