fixed missing picture for occupancy analysis

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <!-- slides -->
                         <div class="slideList">
                            <ul>
-                              <li id="slide_1"><img src="images/about/05.jpg" class="img-fluid" alt="img" /></li>
+                              <li id="slide_1"><img src="images/occupancy/people_in_out.png" class="img-fluid" alt="img" /></li>
                               <!-- <li id="slide_2"><img src="images/about/04.jpg" class="img-fluid" alt="img" /></li> -->
                               <li id="slide_2"><img src="images/technology/traffic_detection.png" class="img-fluid" alt="img" /></li>                               
                               <li id="slide_3" class="active"><img src="images/technology/baggage_size.png" class="img-fluid" alt="img" /></li>
