updated contact form info

--- a/contact-us.html
+++ b/contact-us.html
@@ -125,7 +125,7 @@
                                  </div>
                                  <div class="col-lg-12 col-sm-12">
                                     <div class="section-field mt-3">
-                                       <input class="require contact-phone" id="company_name" type="text" placeholder="Phone Number" name="Phone Number">
+                                       <input class="require contact-phone" id="phone_number" type="text" placeholder="Phone Number" name="phone">
                                     </div>
                                  </div>
                                  
@@ -285,5 +285,7 @@
          <script src="js/wow.min.js"></script>
          <!-- Custom -->
          <script src="js/custom.js"></script>
+
+
       </body>
    </html>
