--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                      <!-- <h1>10X ROI using Computer Vision, AI, and Machine Learning</h1> -->
                      <h1> <span style="font-size: 120%;">10x</span> ROI</h1> <h2>using Computer Vision, AI, Machine Learning, and Analytics</h2> 
                      <p class="mb-5">Delivering faster, better, and efficient solutions for your business needs.</p>
-                     <a href="" class="button mb-lg-0 mb-5">See Solutions</a>
+                     <p> Wondering how you can improve your business? Let's talk, and figure it out.</p>
+                     <a href="contact-us.html" class="button mb-lg-0 mb-5">Contact Us</a>
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 text-right position-relative">
                      <!-- <img src="images/banner/02.png" class="img-fluid banner-box" alt="images"> -->
