updated the greeting message

--- a/contact-us.html
+++ b/contact-us.html
@@ -136,7 +136,7 @@
                                  </div>
                               </div>
                               <button id="submit" name="submit" type="submit" value="Send" class="button pull-right mt-5 mb-5 mb-lg-0 contact-us-button">Send Message</button>
-                              <span class="ml-10" id="result"></span>
+                              <p><span class="ml-10" id="result"></span></p>
                            </div>
                         </form>
                      </div>
