Fatigue Monitoring Added
Description for Fatigue monitoring solution added

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                               <!-- <li id="slide_2"><img src="images/about/04.jpg" class="img-fluid" alt="img" /></li> -->
                               <li id="slide_2"><img src="images/technology/traffic_detection.png" class="img-fluid" alt="img" /></li>                               
                               <li id="slide_3" class="active"><img src="images/technology/baggage_size.png" class="img-fluid" alt="img" /></li>
-                              <li id="slide_4"><img src="images/drivers/annotated3.png" class="img-fluid" alt="img" /></li>
+                              <!-- <li id="slide_4"><img src="images/drivers/annotated3.png" class="img-fluid" alt="img" /></li> -->
+							  <li id="slide_4"><img src="images/technology/fatigue.png" class="img-fluid" alt="img" /></li>
                            </ul>
                         </div>
                         <!-- /slides -->
@@ -174,8 +175,8 @@
                               </li>
                               <li class="object-new">
                                  <a data-links-to="slide_4" class="two" href="#">
-                                    <h3 class="iq-fw-8">Documentation Extraction</h3>
-                                    <p>Extract information from Driver's license, SSNs, W-2s, real estate forms faster.</p>
+                                    <h3 class="iq-fw-8">Fatigue Monitoring</h3>
+                                    <p>Monitor fatigue levels of the operator helping in safe and productive operations</p>
                                  </a>
                               </li>
                            </ul>
