--- a/technology.html
+++ b/technology.html
@@ -206,6 +206,24 @@
                </div>
             </div>
          </section>
+		 <section class="tech-ptb pb-0">
+            <div class="container">
+               <div class="row flex-row-reverse align-items-center">
+                  <div class="col-lg-6" text-right>
+                     <img src="images/technology/fatigue.png" class="img-fluid banner-rounded-circle" alt="images">
+                  </div>
+                  <div class="col-lg-6">
+                     <div class="title-main mb-4">
+                        <div class="tech-no">06</div>
+                        <h2 class="iq-fw-8 d-inline-block">Fatigue Monitoring</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Monitor the fatigue of the operator using in-cabin camera, road monitoring and measuring operator's physical measurements. Raise alerts to
+					 take corrective action. This helps to safegaurd the operators and maintain high levels of efficiency. 
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </section>
 <!--          <section class="tech-ptb">
             <div class="container">
                <div class="row align-items-center flex-row-reverse">
